# swarm_defense

./: .clang-format  .gitignore  .gitmodules  README.md  dependencies.repos  launch.sh  launch2.sh  sd_launch.sh
bash/: build.sh  build_and_run.sh  build_sd.sh  launch.sh
docs/: build.md  setup.md  simulation.md
docs/architecture/: actor_plugin.drawio  base.drawio  drone_control_system.drawio  ros_gazebo.drawio  sd_flight_controller copy.drawio  sd_flight_controller.drawio
models/asphalt_plane/: model.config  model.sdf
models/asphalt_plane_1x2/: model.config  model.sdf
models/asphalt_plane_2x2/: model.config  model.sdf
models/building/: model.config  model.sdf
models/fence/: model.config
models/fence/meshes/: model.dae
models/fence16/: model.config
models/fence2/: model.config
models/fence4/: model.config
models/fence8/: model.config
models/gimbal_small_2d/: model.sdf
models/grass_plane/: model.config
models/grass_plane_1x2/: model.config  model.sdf
models/grass_plane_2x2/: model.config  model.sdf
models/iris_standoff_camera/: model.sdf
models/lock/: model.config  model.sdf
models/my_grass_plane/: model.config  model.sdf
models/oak_tree/: model.config
models/other/building/: model.config
models/railway/: model.config  model.sdf
models/railway/meshes/: railway.dae
models/railway16/: model.config  model.sdf
models/railway2/: model.config  model.sdf
models/railway32/: model.config  model.sdf
models/railway4/: model.config  model.sdf
models/railway64/: model.config
models/railway8/: model.config  model.sdf
models/sbahn/: model.config
models/sbahn/meshes/: model.dae
models/wagon/: model.config
sd/: build.sh  build_sd.sh  clean.sh  client.sh  gazebo.sh  gazebo_source.bash  launch.sh  ros_source.bash  server.sh  simple.sh
src/sd_actor_controller/: CMakeLists.txt  package.xml
src/sd_actor_controller/include/sd_actor_controller/: sd_actor_controller.hpp
src/sd_actor_controller/src/: sd_actor_controller.cpp
src/sd_actor_plugin/: CMakeLists.txt  package.xml
src/sd_actor_plugin/include/sd_actor_plugin/: sd_actor_plugin.hpp
src/sd_actor_plugin/src/: sd_actor_plugin.cpp
src/sd_communication/: CMakeLists.txt  package.xml
src/sd_communication/include/sd_communication/: sd_communication.hpp
src/sd_communication/src/: sd_communication.cpp
src/sd_drone_controller/: CMakeLists.txt  package.xml
src/sd_drone_controller/include/sd_drone_controller/: sd_drone_controller.hpp  sd_utils.hpp
src/sd_drone_controller/src/: sd_drone_controller.cpp
src/sd_drone_plugin/: CMakeLists.txt  package.xml
src/sd_drone_plugin/include/sd_drone_plugin/: sd_drone_plugin.hpp
src/sd_drone_plugin/src/: sd_drone_plugin.cpp
src/sd_flight_controller/: CMakeLists.txt  package.xml
src/sd_flight_controller/include/sd_flight_controller/: pid.hpp  sd_flight_controller.hpp
src/sd_flight_controller/src/: pid.cpp  sd_flight_controller.cpp
src/sd_gazebo_ros_plugins/: CMakeLists.txt  package.xml
src/sd_gazebo_ros_plugins/include/sd_gazebo_ros_plugins/: hello_world_plugin.hpp  motor.hpp  ros_test_plugin.hpp  sd_actor_plugin.hpp  sd_drone_plugin.hpp  sd_simple_drone_plugin.hpp
src/sd_gazebo_ros_plugins/include/swarm_defense_gazebo_ros_plugins/: hello_world_plugin.hpp
src/sd_gazebo_ros_plugins/src/: hello_world_plugin.cpp  ros_test_plugin.cpp  sd_actor_plugin.cpp  sd_drone_plugin.cpp  sd_simple_drone_plugin.cpp
src/sd_interfaces/: CMakeLists.txt  package.xml
src/sd_interfaces/action/: Walk.action
src/sd_interfaces/msg/: BoundingBox.msg  DroneHeader.msg  DroneInfo.msg  DroneMsgOut.msg  DroneMsgs.msg  FlightTarget.msg  Object.msg  ObjectStamped.msg  ObjectsVector.msg  Pose.msg  Poses2Stamped.msg  Position2Array.msg  Position2Stamped.msg  Position3Array.msg  Position3Stamped.msg  PositionStamped.msg  PositionsVector.msg  QuadcopterRPM.msg  RPM.msg  RotorRPM.msg  SwarmInfo.msg  SwarmPositions.msg  Threat.msg
src/sd_interfaces/srv/: SetDroneTarget.srv
src/sd_simulation/: CMakeLists.txt  package.xml
src/sd_simulation/launch/: simple.launch.py  simple_simulation.launch.py  simulation.launch.py
src/sd_simulation/worlds/: simple.world  simple_world.world  v1.world  world.world  world1.world  world_v1.world  world_v2.world  world_v3.world  world_v4.world
src/sd_visualiser/: package.xml  setup.cfg  setup.py
src/sd_visualiser/sd_visualiser/: sd_visualiser.py
src/sd_world_plugin/: CMakeLists.txt  package.xml
src/sd_world_plugin/include/sd_world_plugin/: sd_world_plugin.hpp
src/sd_world_plugin/src/: sd_world_plugin.cpp
src/simulation/: CMakeLists.txt  package.xml
src/simulation/launch/: simulation.launch.py
src/swarm_defense_gazebo_ros_plugins/: CMakeLists.txt  package.xml
src/swarm_defense_gazebo_ros_plugins/include/swarm_defense_gazebo_ros_plugins/: hello_world_plugin.hpp
src/swarm_defense_gazebo_ros_plugins/src/: hello_world_plugin.cpp
src/swarm_defense_simulation/: CMakeLists.txt  package.xml
src/swarm_defense_simulation/worlds/: world1.world
