<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sd_flight_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yusuf.emre.samur@icloud.com">yusuf</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rcl</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>Eigen3</depend>
  <depend>sd_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
